# Jira-ai

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
eg_response_data/: jira-automate-format.json  jira-new-epic.json  jira-normal-format.json
postman_collection/: postman_personal_collection.txt
src/: main.py
src/api-requests/: post-comment.py
src/api_requests/: custom_requests.py  post_comment.py
src/coder/: chat_langchain.py  code_loader.py  code_updater.py  coder_prompt.py
src/gen_ai/: ai_main.py  ai_openai.py
src/git_integrator/: create_pr.py  git_activities.py  git_repository.py
src/helpers/: ticket_info_extractor.py
src/jira_agent/: create_ticket.py  jira_main.py  post_comment.py  update_ticket.py
src/jira_agent/ADF/: adf_components.py  issue_templates.py
src/llama_idx/: ai_llama.py  chat_promt.py
src/logger/: custom_logger.py
src/models/: ai_responses.py  chat_model.py  ticket_model.py
src/prompts/: create_stories_ai_prmt.py  get_rca_and_solution_for_bugfix.py  get_solution_ai_prmt.py
src/vector_db/: db_connection.py  db_transactions.py
src/vector_db/milvus_db/: db_llama_milvus.py
src/views/: chat_view.py  code_view.py  comment_view.py  home_view.py  milvus_search_view.py  search_view.py  ticket_v2_view.py  ticket_view.py
src/webhooks/: custom_webhooks.py  post_comment.py
